RESOLVED FIXED191368
Layout Test fast/text/international/khmer-selection.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=191368
Summary Layout Test fast/text/international/khmer-selection.html is crashing
Per Arne Vollan
Reported 2018-11-07 08:59:55 PST
The following layout test is failing on Windows: fast/text/international/khmer-selection.html Probable cause: Unknown. Flakiness Dashboard: https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=fast%2Ftext%2Finternational%2Fkhmer-selection.html
Attachments
Patch (3.35 KB, patch)
2019-02-15 17:25 PST, Per Arne Vollan
no flags
Alternative patch (6.08 KB, patch)
2019-02-18 17:59 PST, Myles C. Maxfield
no flags
Patch (6.55 KB, patch)
2019-02-20 11:33 PST, Per Arne Vollan
no flags
Patch (7.59 KB, patch)
2019-02-20 13:25 PST, Per Arne Vollan
no flags
Patch (7.59 KB, patch)
2019-02-20 15:09 PST, Per Arne Vollan
no flags
Patch (7.59 KB, patch)
2019-02-20 15:52 PST, Per Arne Vollan
no flags
Patch (9.64 KB, patch)
2019-02-21 09:04 PST, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2019-02-15 17:25:49 PST
Per Arne Vollan
Comment 2 2019-02-15 17:43:07 PST
Myles C. Maxfield
Comment 3 2019-02-18 17:40:00 PST
Comment on attachment 362192 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=362192&action=review > Source/WebCore/platform/graphics/GlyphBuffer.h:161 > + if (index >= m_offsetsInString->size()) > + return GlyphBuffer::noOffset; It looks like this happens any time complex text is underlined. I wish we could migrate Windows to ComplexTextController. I had a patch at https://bugs.webkit.org/show_bug.cgi?id=167954 but it never got finished. Can we actually implement this feature instead of simply covering up its symptoms? We could make GlyphBuffer::add() not have any default arguments. Maybe I can do this today.
Myles C. Maxfield
Comment 4 2019-02-18 17:59:49 PST
Created attachment 362361 [details] Alternative patch
Myles C. Maxfield
Comment 5 2019-02-18 18:00:42 PST
How about a patch like this? I don't know if it builds because I don't have a Windows machine, but it seems preferable to fix this problem by implementing the feature instead of failing gracefully.
Per Arne Vollan
Comment 6 2019-02-19 10:09:10 PST
(In reply to Myles C. Maxfield from comment #5) > How about a patch like this? I don't know if it builds because I don't have > a Windows machine, but it seems preferable to fix this problem by > implementing the feature instead of failing gracefully. Thanks, looks great, Myles! I am not sure why it is not building, probably just a small adjustment needed.
Per Arne Vollan
Comment 7 2019-02-20 11:33:05 PST
Per Arne Vollan
Comment 8 2019-02-20 11:33:40 PST
(In reply to Per Arne Vollan from comment #7) > Created attachment 362519 [details] > Patch This is Myles' patch.
Per Arne Vollan
Comment 9 2019-02-20 13:25:48 PST
Per Arne Vollan
Comment 10 2019-02-20 15:09:25 PST
Per Arne Vollan
Comment 11 2019-02-20 15:52:34 PST
Per Arne Vollan
Comment 12 2019-02-21 09:04:55 PST
Brent Fulgham
Comment 13 2019-02-21 14:46:17 PST
Comment on attachment 362613 [details] Patch Very nice! r=me.
Per Arne Vollan
Comment 14 2019-02-21 14:55:38 PST
(In reply to Brent Fulgham from comment #13) > Comment on attachment 362613 [details] > Patch > > Very nice! r=me. Thanks to Myles for creating the patch, and to Brent for reviewing :)
WebKit Commit Bot
Comment 15 2019-02-21 15:12:42 PST
Comment on attachment 362613 [details] Patch Clearing flags on attachment: 362613 Committed r241915: <https://trac.webkit.org/changeset/241915>
WebKit Commit Bot
Comment 16 2019-02-21 15:12:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.